# occams-Research-Digest-Agent

./: .gitignore  README.md  WORKFLOW.md  app.py  main.py  pyproject.toml  requirements.txt
config/: logging_config.py  settings.py
sample_inputs/: article_001.txt  article_002.txt  article_003.txt  article_004.txt  article_005.txt  urls.txt
sample_inputs/ai_regulation/: EU AI Act_ first regulation on artificial intelligence _ Topics _ European Parliament.html  ai-regulation-a-tale-of-two-austrian-economists.txt  ai_regulation_around_the_world.txt  ai_regulations_around_the_world.txt  shaping_ai_governance_policies_southeast_asia.txt
src/: models.py  orchestrator.py
src/extraction/: __init__.py  claim_extractor.py
src/generation/: __init__.py  digest_generator.py
src/grouping/: __init__.py  deduplicator.py
src/ingestion/: __init__.py  cleaner.py  fetcher.py
src/processing/: __init__.py  chunker.py  summarizer.py
src/store/: __init__.py  vector_store.py
tests/: test_conflicting_claims.py  test_deduplication.py  test_ingestion.py
